<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FciDownload</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Fast Custom image</string>
    <string name="code">Code</string>
    <string name="init_progress">0</string>
    <string name="warning_text">To avoid update failure.please stay on the current interface during firmware download,maintain the network connection,and ensure sufficient battery life.</string>
    <string name="next">NEXT</string>
    <string name="install">INSTALL</string>
    <string name="code_wrong">Your code is wrong,please check again !</string>
    <string name="network_wrong">No network connection !</string>
    <string name="start_download">start to download</string>
    <string name="code_hint">please input your code</string>

</resources>